--- a/BinaryTreeADT/Makefile
+++ b/BinaryTreeADT/Makefile
@@ -3,19 +3,23 @@ CFLAGS=-Wall -g
 
 .PHONY: all clean valgrind
 
-all: bin bin/bstdriver
+all: bin bin/binarytreedriver
 
 bin: 
 	mkdir -p bin
 
-bin/bstdriver: bin/bstdriver.o bin/bst.o ../ListADT/bin/list.o ../PriorityQueueADT/bin/pqueue.o
-	${CC} ${CFLAGS} bin/bstdriver.o bin/bst.o ../ListADT/bin/list.o ../PriorityQueueADT/bin/pqueue.o -o bin/bstdriver
+bin/binarytreedriver: bin/binarytreedriver.o bin/binarytree.o \
+						../ListADT/bin/list.o \
+						../PriorityQueueADT/bin/pqueue.o
+	${CC} ${CFLAGS} bin/binarytreedriver.o bin/binarytree.o ../ListADT/bin/list.o \
+						../PriorityQueueADT/bin/pqueue.o -o bin/binarytreedriver
 
-bin/bstdriver.o: src/bstdriver.c include/bst.h 
-	${CC} ${CFLAGS} -c src/bstdriver.c -o bin/bstdriver.o
+bin/binarytreedriver.o: src/binarytreedriver.c include/binarytree.h 
+	${CC} ${CFLAGS} -c src/binarytreedriver.c -o bin/binarytreedriver.o
 
-bin/bst.o: src/bst.c include/bst.h ../ListADT/include/list.h ../PriorityQueueADT/include/pqueue.h
-	${CC} ${CFLAGS} -c src/bst.c -o bin/bst.o
+bin/binarytree.o: src/binarytree.c include/binarytree.h ../ListADT/include/list.h \
+					../PriorityQueueADT/include/pqueue.h
+	${CC} ${CFLAGS} -c src/binarytree.c -o bin/binarytree.o
 
 ../ListADT/bin/list.o:
 	cd ../ListADT; make bin/list.o
@@ -23,8 +27,8 @@ bin/bst.o: src/bst.c include/bst.h ../ListADT/include/list.h ../PriorityQueueADT
 ../PriorityQueueADT/bin/pqueue.o:
 	cd ../PriorityQueueADT; make bin/pqueue.o
 	
-valgrind: bin/bstdriver
-	valgrind -v --leak-check=yes --track-origins=yes --leak-check=full --show-leak-kinds=all bin/bstdriver
+valgrind: bin/binarytreedriver
+	valgrind -v --leak-check=yes --track-origins=yes --leak-check=full --show-leak-kinds=all bin/binarytreedriver
 
 clean:
-	rm -rf bin/*.o bin/bstdriver
+	rm -rf bin/*.o bin/binarytreedriver
