--- a/Huffman/Makefile
+++ b/Huffman/Makefile
@@ -20,7 +20,8 @@ bin/huffmandriver.o: src/huffmandriver.c include/huffman.h
 	${CC} ${CFLAGS} -c src/huffmandriver.c -o bin/huffmandriver.o
 
 bin/huffman.o: src/huffman.c include/huffman.h ../ListADT/include/list.h \
-				../PriorityQueueADT/include/pqueue.h ../BinaryTreeADT/include/binarytree.h
+				../PriorityQueueADT/include/pqueue.h \
+				../BinaryTreeADT/include/binarytree.h
 	${CC} ${CFLAGS} -c src/huffman.c -o bin/huffman.o
 
 ../ListADT/bin/list.o:
@@ -33,7 +34,8 @@ bin/huffman.o: src/huffman.c include/huffman.h ../ListADT/include/list.h \
 	cd ../BinaryTreeADT; make bin/binarytree.o
 	
 valgrind: bin/huffmandriver
-	valgrind -v --leak-check=yes --track-origins=yes --leak-check=full --show-leak-kinds=all bin/huffmandriver
+	valgrind -v --leak-check=yes --track-origins=yes --leak-check=full \
+	--show-leak-kinds=all bin/huffmandriver
 
 clean:
 	rm -rf bin/*.o bin/huffmandriver
